fix: limit card width and add text wrap

--- a/src/features/games/sprint/sprint-turn/SprintTurn.module.scss
+++ b/src/features/games/sprint/sprint-turn/SprintTurn.module.scss
@@ -1,5 +1,3 @@
 .sprintCard {
-  .guessButton {
-    width: 8rem;
-  }
+  max-width: 17rem;
 }
